@@ -8,6 +8,7 @@ cdebconf-entropy (0.9) UNRELEASED; urgency=low
   * Fix minor usability issues in the GTK+ plugin:
     - Display the help text in a similar way than normal extended
       descriptions.
+    - Display a completion percentage while gathering entropy.
 
  -- Jérémy Bobbio <lunar@debian.org>  Thu, 08 May 2008 13:37:50 +0000
 
